--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -41,6 +41,10 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
+#pplinker{
+     color: #BAAF90;
+}
+
 #pphead{
     font-family: 'flour';
     font-size:8px;
@@ -56,6 +60,7 @@ body {
 #ppcontent{
     background-color: #1E0E16;
     padding-top:1px;
+    width:100%;
     padding-bottom:5px;
     font-size:12pt;
     border-left: 1px solid #724D36;
@@ -278,9 +283,13 @@ table td, table th {
 }
 
 pre {
+    color: #CDC6C8;
+    opacity: 0.8;
+    filter: alpha(opacity=80); /* For IE8 and earlier */;
     font-family:"proggy";
+    background-color: #1C1621;
     margin-left:20px;
-    width: 300px;                          /* specify width  */
+    margin-right:10px;
     white-space: pre-wrap;                 /* CSS3 browsers  */
     white-space: -moz-pre-wrap !important; /* 1999+ Mozilla  */
     white-space: -pre-wrap;                /* Opera 4 thru 6 */
