--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     <div id="page">
       <div id="page-head">
           <a id="maintitle" href="{{ SITEURL }}/index.html">{{ SITENAME }}</a>
-        <div id='subtitle'>sonic arab</div>
+        <div id='subtitle'>code, thoughts, big balls.</div>
       </div>
       
       <div id="page-body">
