--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -41,7 +41,7 @@
 <div class="coin" >{ @ }</div>
 <ul class="tree" id="tree">
   <li ><a  class="menuentry" href='http://soundcloud.com/orvy'>soundcloud</a></li>
-  <li ><a  class="menuentry" href='ogrum@live.com'>email</a></li>
+  <li ><a  class="menuentry" href='mailto:ogrum@live.com'>email</a></li>
   
   <li class="last"><a  class="menuentry" href='http://github.com/gbdu'>github</a></li>
 
