--- a/templates/index.html
+++ b/templates/index.html
@@ -6,19 +6,17 @@
       <article > 
       <div class="ppbase" id="ppbase">
       <div class="post-header">
-            <a id="pphead" rel="bookmark" href="{{ SITEURL }}/{{ article.url }}">[ {{ article.title }} ]
+            <a id="pphead" rel="bookmark" href="{{ SITEURL }}/{{ article.url }}">[ {{ article.title }} ] -
             {% include "includes/article_meta.html" %}</a>
              <a id="pplinker" rel="bookmark" href="{{ SITEURL }}/{{ article.url }}">
           <div id="ppcontent" class="post-content"> 
             {{ article.summary }}
           </div></a>
-
+      </div>
+      
         <div class="readmore">
           <a  href="{{ SITEURL }}/{{ article.url }}"> more </a>
-          <a  href="{{ SITEURL }}/{{ article.url }}"> share </a>
-          <a  href="{{ SITEURL }}/{{ article.url }}"> link </a>
         </div>
-      </div>
       </div>
       </a>
       </article>
