--- a/templates/article.html
+++ b/templates/article.html
@@ -14,8 +14,7 @@
       <div class="post-header">
           <a id="pphead" rel="bookmark"
              href="{{ SITEURL }}/{{ article.url }}">
-             [ {{ article.title }} ] 
-          {% include "includes/article_meta.html" %}
+             [ {{ article.title }} ]        -   {% include "includes/article_meta.html" %}
           </a>
       </div>
       <div id="ppcontent" class="post-content"> 
