--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -1,4 +1,3 @@
-/* vim: set ts=4 sw=4 et: */
 
 
 @font-face {
@@ -32,11 +31,22 @@
 }
 
 
+@font-face {
+     font-family: 'anon';
+     src: url('anon.otf');
+     font-weight: normal;
+     font-style: normal;
+}
+
+#grid-item {
+    width:200px;
+}
+
 
 body {
-    font-family: 'ubuntu', "Inconsolata", Monospace;
+    font-family: 'anon', "Inconsolata", Monospace;
     color: #EEDFB8;
-    font-size:1.5em;
+    font-size:12pt;
     background-color: #190C12;
     -webkit-font-smoothing: antialiased;
 }
@@ -63,7 +73,7 @@ body {
     background-color: #1E0E16;
     padding-top:1px;
     padding-bottom:5px;
-    font-size:15pt;
+    font-size:14pt;
     border-left: 1px solid #AB745D;
     overflow:initial;
 }
@@ -119,6 +129,7 @@ h1, h2, h3,
 h4, h5, h6
 {
     font-family: "flour";
+    margin-left:20px;
 }
 .meta {
 }
@@ -279,8 +290,8 @@ a.goto {
 
 
 img, figure, table {
-    margin: 1em auto;
-    overflow-x: auto;
+    max-width: 100%; height: auto; 
+
 }
 
 table td, table th {
@@ -290,9 +301,10 @@ pre {
     color: #CDC6C8;
     opacity: 0.8;
     filter: alpha(opacity=80); /* For IE8 and earlier */;
-    font-family:"proggy";
+    font-family: Monospace;
     background-color: #1C1621;
     margin-left:20px;
+    font-size:12px;
     margin-right:10px;
     white-space: pre-wrap;                 /* CSS3 browsers  */
     white-space: -moz-pre-wrap !important; /* 1999+ Mozilla  */
