--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
     <div id="page">
       <div id="page-head">
           <a id="maintitle" href="{{ SITEURL }}/index.html">{{ SITENAME }}</a>
-        <div id='subtitle'>code, thoughts, big balls.</div>
+        <div id='subtitle'>Random bits on random shit</div>
       </div>
       
       <div id="page-body">
