--- a/static/css/skeleton.css
+++ b/static/css/skeleton.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 #page {
-    max-width: 650px;
+    max-width: 750px;
     min-width: 240px;
     margin: 0 auto;
     padding: 0;
@@ -18,11 +18,18 @@ html, body {
 #page-body,
 #page-foot {
     clear: both;
-    margin: 2;
+    margin: 0;
     padding: 0;
 }
 
-#page-body { margin: 0 1em; }
+#page-foot{
+	margin: 30px;
+	padding: 15px;
+}
+
+#page-body {
+	margin: 0 0em;
+}
 
 
 #page-main, #page-side {
