--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,9 @@
       <div class="post-header">
             <a id="pphead" rel="bookmark" href="{{ SITEURL }}/{{ article.url }}">[ {{ article.title }} ] -
             {% include "includes/article_meta.html" %}</a>
-             <a id="pplinker" rel="bookmark" href="{{ SITEURL }}/{{ article.url }}">
           <div id="ppcontent" class="post-content"> 
             {{ article.summary }}
-          </div></a>
+          </div>
       </div>
       
         <div class="readmore">
