--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,8 @@
     
 
 
-    <link rel="shortcut icon" type="image/png" href="{{ SITEURL }}/favicon.png" />
-    <!--[if lte IE 8]><link rel="shortcut icon" type="image/x-icon" href="{{ SITEURL }}/favicon.ico" /><![endif]-->
+    <link rel="shortcut icon" href="{{ SITEURL }}/favicon.png?v=2" />
+<!--[if lte IE 8]><link rel="shortcut icon" type="image/x-icon" href="{{ SITEURL }}/favicon.ico" /><![endif]-->
     <link rel="alternate" type="application/atom+xml"
                            title="{{ SITENAME }} — Flux Atom"
                            href="{{ SITEURL }}/{{ FEED_ATOM }}" /> 
