--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     
 
 
-    <link rel="shortcut icon" href="{{ SITEURL }}/favicon.png?v=2" />
+    <link rel="shortcut icon" href="{{ SITEURL }}/favicon.ico" />
 <!--[if lte IE 8]><link rel="shortcut icon" type="image/x-icon" href="{{ SITEURL }}/favicon.ico" /><![endif]-->
     <link rel="alternate" type="application/atom+xml"
                            title="{{ SITENAME }} — Flux Atom"
