--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,14 @@
       <div id="page-head">
           <a id="maintitle" href="{{ SITEURL }}/index.html">{{ SITENAME }}</a>
         <div id='subtitle'>Random bits on random shit</div>
+
+<form class="navbar-form navbar-left" role="search" action="{{ SITEURL }}/search.html" onsubmit="return validateForm(this.elements['q'].value);">
+    <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search" name="q" id="tipue_search_input">
+    </div>
+</form>
+
+
       </div>
       
       <div id="page-body">
@@ -62,7 +70,5 @@
     </script>
     {% endif %}
   
-
-
   </body>
 </html>
